--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,6 @@ a {
   overflow: clip;
   margin: 0 auto;
   background-color: #fff;
-
 }
 
 /* ================== */
@@ -128,7 +127,7 @@ a {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 5fr;
-  background-image: url('../images/Slider\ img\ 3.png');
+  background-image: url('../images/Slider\ img\ 3.jpg');
   object-fit: cover;
 }
 
@@ -139,6 +138,10 @@ a {
 
   width: 1120px;
   max-height: 120px;
+
+}
+
+.contact__navigation-item:last-child {
   position: relative;
   overflow: hidden;
 }
@@ -149,14 +152,13 @@ a {
   height: 500px;
   top: 0;
   left: 365px;
-
   display: none;
   transform: translate(-100%);
   z-index: 2;
 }
 
 .overlay__box {
-  display: flex;
+  display: none;
 }
 
 .overlay__list {
@@ -174,11 +176,6 @@ a {
   transform: translate(0);
 }
 
-@media (max-width 480px) {
-  .main__navigation-overlay {
-    display: flex;
-  }
-}
 
 .main__navigation-list {
   display: flex;
@@ -398,4 +395,508 @@ a {
 .btnlink1:hover::before {
   background: var(--text-color-white);
   transition: background 0.5s ease;
+}
+
+/* ===========================main */
+
+.main__discription {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 705px;
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
+.main__discription-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.main__disription-text {
+  margin-left: 64px;
+
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.main__disription-subtitle {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.main__disription-subtitle h6 {
+  color: var(--title-text);
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.1px;
+  text-transform: uppercase;
+}
+
+.line-discription {
+  width: 1px;
+  height: 60px;
+  transform: rotate(90deg);
+  flex-shrink: 0;
+  background-color: var(--title-text);
+  margin-left: 30px;
+}
+
+.main__disription-title {
+  margin-bottom: 20px;
+  color: var(--title-text);
+  font-family: Raleway;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.1px;
+}
+
+.main__disription-textbig {
+  margin-bottom: 20px;
+  color: #555;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.36px;
+}
+
+.main__disription-textsmall {
+  margin-bottom: 40px;
+  color: #555;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0.28px;
+}
+
+.btn.black__button a {
+  color: #303030;
+}
+
+.btn.black__button a:hover {
+  color: rgba(255, 108, 0, 1);
+  transition: color 0.3s ease;
+}
+
+/* ====================price== */
+.price-background {
+  background-image: url("../images/priceimg.jpg");
+}
+
+.main__price {
+  display: flex;
+  flex-direction: column;
+  max-height: 718px;
+  padding: 130px 0;
+}
+
+.main__price-subtitle {
+  display: flex;
+  align-items: center;
+  gap: 55px;
+  margin-bottom: 20px;
+}
+
+.main__price-subtitle h6 {
+  color: rgba(157, 164, 189, 0.60);
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.1px;
+  text-transform: uppercase;
+}
+
+.price__line {
+  width: 1px;
+  height: 60px;
+  transform: rotate(90deg);
+  flex-shrink: 0;
+  background: rgba(157, 164, 189, 0.60);
+  margin-left: 30px;
+}
+
+.main__price-title h3 {
+  display: flex;
+
+  color: var(--text-color-white);
+  font-family: Raleway;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.1px;
+}
+
+.main__price-column {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  margin-top: 44px;
+}
+
+.main__price-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 40px;
+}
+
+.main__price-item {
+  display: flex;
+
+  color: #9DA4BD;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.36px;
+}
+
+.main__price-right,
+.main__price-left {
+  background: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.20) 100%);
+}
+
+@keyframes shadow-inset-center {
+  0% {
+    box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    box-shadow: inset 0 0 14px 0px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.price__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.main__price-itemline {
+  color: rgba(157, 164, 189, 0.12);
+  display: flex;
+  align-items: end;
+}
+
+.main__price-right:hover,
+.main__price-left:hover {
+  background: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.20) 100%);
+  animation: shadow-inset-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  transition: all 0.5s ease;
+}
+
+/* =================info==== */
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-row-gap: 130px;
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
+.info__boxes {
+  display: flex;
+}
+
+.info__boxes-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 40px;
+  justify-content: center;
+}
+
+.info__boxes-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 170px;
+  height: 133px;
+  flex-shrink: 0;
+  background: #F7F7F7;
+  height: 133px;
+}
+
+.info__boxes-number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: #303030;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.1px;
+
+  position: relative;
+}
+
+.info__boxes-number::after {
+  content: "+";
+  color: #FF6C00;
+  /* position: absolute; */
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  top: -10px;
+  left: 50px;
+  margin-bottom: 30px;
+}
+
+.info__boxes-text {
+  color: #303030;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  width: 130px;
+
+}
+
+.info__text {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.info__text-subtitle {
+  display: flex;
+  align-items: center;
+}
+
+.info__text-subtitle h6 {
+  color: #303030;
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.1px;
+  text-transform: uppercase;
+}
+
+.info__text-line {
+  width: 1px;
+  height: 60px;
+  transform: rotate(90deg);
+  flex-shrink: 0;
+  background: #303030;
+  margin-left: 30px;
+  margin-right: 60px;
+}
+
+.info__text-title h3 {
+  color: #303030;
+  font-family: Raleway;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.1px;
+}
+
+.info__text-other p {
+  color: #555;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  /* 166.667% */
+  letter-spacing: 0.36px;
+}
+
+
+/* ===============masters==== */
+
+.masters {
+  display: flex;
+  flex-direction: column;
+  margin-top: 130px;
+  margin-bottom: 130px;
+  background-color: rgba(247, 247, 247, 1)
+}
+
+.masters__subtitle {
+  display: flex;
+  align-items: center;
+}
+
+.masters__subtitle h6 {
+  color: #303030;
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.1px;
+  text-transform: uppercase;
+}
+
+.masters__line {
+  width: 1px;
+  height: 60px;
+  transform: rotate(90deg);
+  flex-shrink: 0;
+  background: #303030;
+  margin-left: 30px;
+  margin-right: 60px;
+}
+
+.masters__title {
+  margin-bottom: 44px;
+}
+
+.masters__title h3 {
+  color: #303030;
+
+  font-family: Raleway;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.1px;
+}
+
+.masters__content {
+  display: flex;
+}
+
+.masters__box-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.masters__box {
+  display: flex;
+  flex-direction: column;
+}
+
+.masters__portfolio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.masters__portfolio-image {
+  padding-bottom: 30px;
+}
+
+.master__portfolio-text1 {
+  padding-bottom: 8px;
+  color: #303030;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.36px;
+}
+
+.master__portfolio-text2 {
+  padding-bottom: 30px;
+  color: #FF6C00;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
+
+.masters__social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 34px;
+}
+
+.masters__social div {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.masters__social-link:hover {
+  fill: rgba(255, 108, 0, 1);
+  transition: 0.3s ease;
+}
+
+/* ==========foto========== */
+
+.foto {
+  display: flex;
+  margin-top: 130px;
+  margin-bottom: 130px;
+  flex-direction: column;
+}
+
+.foto__text {
+  display: flex;
+  align-items: center;
+  margin-bottom: 44px;
+}
+
+.foto__text h6 {
+  color: #303030;
+  font-family: "Open Sans";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.1px;
+  text-transform: uppercase;
+}
+
+.foto__text-line {
+  width: 1px;
+  height: 60px;
+  transform: rotate(90deg);
+  flex-shrink: 0;
+  background: #303030;
+  margin-left: 30px;
+  margin-right: 60px;
+}
+
+.foto__content {
+  display: flex;
+  gap: 30px;
 }
